[gd_scene load_steps=7 format=3 uid="uid://c8jr0502ype8o"]

[ext_resource type="Texture2D" uid="uid://c7ykcjufctxuy" path="res://assets/board.png" id="1_0208c"]
[ext_resource type="Script" uid="uid://bkm0hhgr0j43a" path="res://scripts/game.gd" id="1_tclo3"]
[ext_resource type="Script" uid="uid://b80xh8x04666f" path="res://scripts/board.gd" id="3_mjhun"]
[ext_resource type="Script" uid="uid://baeg1fk2350a7" path="res://scripts/CloudStockfishBot.gd" id="4_lbhrr"]
[ext_resource type="Script" uid="uid://bvd33tc4wgkkv" path="res://scripts/FENBuilder.gd" id="5_iywne"]
[ext_resource type="Script" uid="uid://dnscledwb7o21" path="res://scripts/util_functions.gd" id="6_p57ef"]

[node name="Game" type="Node2D"]
script = ExtResource("1_tclo3")

[node name="GameOver" type="AcceptDialog" parent="."]
title = "Result"
initial_position = 4
size = Vector2i(119, 100)
unresizable = true
ok_button_text = "Play Again?"
dialog_text = "Checkmate!"

[node name="Board" type="Sprite2D" parent="."]
scale = Vector2(1, 1.002)
texture = ExtResource("1_0208c")
centered = false
script = ExtResource("3_mjhun")

[node name="StockfishSocket" type="Node" parent="."]
script = ExtResource("4_lbhrr")

[node name="HTTPRequest" type="HTTPRequest" parent="StockfishSocket"]

[node name="StockfishBot" type="Node" parent="."]
script = ExtResource("5_iywne")

[node name="Util_Functions" type="Node" parent="."]
script = ExtResource("6_p57ef")
